--- a/agenda/comum/css/comum.css
+++ b/agenda/comum/css/comum.css
@@ -36,7 +36,7 @@ b, strong {
 	position: relative;
 }
 #content-wrapper h1 a {
-	background-image: url('../images/agenda.png');
+	background-image: url('../imagens/icones/agenda.png');
 	background-position: left;
 	background-repeat: no-repeat;
 	background-size: contain;
@@ -56,23 +56,23 @@ b, strong {
 }
 
 #tab-contatos {
-	background-image: url('../images/contatos.png');
+	background-image: url('../imagens/icones/contatos.png');
 }
 
 #tab-categorias {
-	background-image: url('../images/categorias.png');
+	background-image: url('../imagens/icones/categorias.png');
 }
 
 #tab-email {
-	background-image: url('../images/email.png');
+	background-image: url('../imagens/icones/email.png');
 }
 
 /* Footer */
 
 footer {
-	background: url(../images/bg-footer-noise.jpg) repeat;
-	background-image: -webkit-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.0)), url(../images/bg-footer-noise.jpg);
-	background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,0)), url(../images/bg-footer-noise.jpg);
+	background: url(../imagens/bg-footer-noise.jpg) repeat;
+	background-image: -webkit-linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.0)), url(../imagens/bg-footer-noise.jpg);
+	background-image: linear-gradient(to bottom, rgba(0,0,0,.3), rgba(0,0,0,0)), url(../imagens/bg-footer-noise.jpg);
 	background-repeat: repeat-x, repeat;
 	background-size: 100px 15px, 140px 140px;
 	border-top: 1px solid #7ACEF4;
@@ -95,7 +95,7 @@ footer a:hover {
 }
 
 #autor {
-	background-image: url('../images/autor.jpg');
+	background-image: url('../imagens/autor.jpg');
 	background-position: left;
 	background-repeat: no-repeat;
 	background-size: 50px;
@@ -113,7 +113,7 @@ footer a:hover {
 /* Data tables */
 
 .dataTables_filter input {
-	background: white url(../images/icons/pesquisar.png) left 5px center no-repeat !important;
+	background: white url(../imagens/icones/pesquisar.png) left 5px center no-repeat !important;
 	padding-left: 26px !important;
 }
 .acoes_wrapper {
@@ -177,26 +177,26 @@ label.error {
 .icone_22x22{background-size: 22px 22px; width: 22px; height: 22px;}
 .icone_24x24{background-size: 24px 24px; width: 24px; height: 24px;}
 
-.icone_novo_contato{background-image: url(../images/icons/novo_contato.png);}
-.icone_nova_categoria{background-image: url(../images/icons/nova_categoria.png);}
-.icone_salvar_azul{background-image: url(../images/icons/icon_salvar_azul.png);}
-.icone_voltar_azul{background-image: url(../images/icons/icon_voltar_azul.png);}
-.icone_importar_azul{background-image: url(../images/icons/icon_importar_azul.png);}
-.icone_enviar_azul{background-image: url(../images/icons/icon_enviar_azul.png);}
+.icone_novo_contato{background-image: url(../imagens/icones/novo_contato.png);}
+.icone_nova_categoria{background-image: url(../imagens/icones/nova_categoria.png);}
+.icone_salvar_azul{background-image: url(../imagens/icones/icon_salvar_azul.png);}
+.icone_voltar_azul{background-image: url(../imagens/icones/icon_voltar_azul.png);}
+.icone_importar_azul{background-image: url(../imagens/icones/icon_importar_azul.png);}
+.icone_enviar_azul{background-image: url(../imagens/icones/icon_enviar_azul.png);}
 
-.icone_editar{background-image: url(../images/icons/editar.png);}
-.icone_excluir{background-image: url(../images/icons/excluir.png);}
-.icone_download{background-image: url(../images/icons/icon_download.png) !important;}
-.icone_play{background-image: url(../images/icons/icon_play.png) !important;}
-.icone_cancelar{background-image: url(../images/icons/icon_cancelar.png) !important;}
+.icone_editar{background-image: url(../imagens/icones/editar.png);}
+.icone_excluir{background-image: url(../imagens/icones/excluir.png);}
+.icone_download{background-image: url(../imagens/icones/icon_download.png) !important;}
+.icone_play{background-image: url(../imagens/icones/icon_play.png) !important;}
+.icone_cancelar{background-image: url(../imagens/icones/icon_cancelar.png) !important;}
 
-.icone_categoria{background-image: url(../images/icons/icon_categoria.png) !important;}
-.icone_contato{background-image: url(../images/icons/icon_contato.png) !important;}
-.icone_grupo{background-image: url(../images/icons/icon_grupo.png) !important;}
-.icone_conteudos{background-image: url(../images/icons/icon_conteudos.png) !important;}
-.icone_conteudo{background-image: url(../images/icons/icon_conteudo.png) !important;}
-.icone_images{background-image: url(../images/icons/icon_images.png) !important;}
-.icone_arquivos{background-image: url(../images/icons/icon_conteudos.png) !important;}
+.icone_categoria{background-image: url(../imagens/icones/icon_categoria.png) !important;}
+.icone_contato{background-image: url(../imagens/icones/icon_contato.png) !important;}
+.icone_grupo{background-image: url(../imagens/icones/icon_grupo.png) !important;}
+.icone_conteudos{background-image: url(../imagens/icones/icon_conteudos.png) !important;}
+.icone_conteudo{background-image: url(../imagens/icones/icon_conteudo.png) !important;}
+.icone_images{background-image: url(../imagens/icones/icon_images.png) !important;}
+.icone_arquivos{background-image: url(../imagens/icones/icon_conteudos.png) !important;}
 
 .botao_com_icone span {
 	line-height: 22px;
