--- a/agenda/categorias/css/categorias.css
+++ b/agenda/categorias/css/categorias.css
@@ -1,7 +1,6 @@
-.table_categoria_contatos {
+.table_categoria_contatos, .table_categoria_acoes, .table_contato_categoria_pertence {
 	text-align: center;
 }
-
 .link_excluir_categoria {
 	margin-left: 10px;
 }
