--- a/agenda/email/css/email.css
+++ b/agenda/email/css/email.css
@@ -1,3 +1,12 @@
+#ipt_destinatarios {
+	display: none;
+}
+#ul_destinatarios {
+	border-style: solid;
+	border-width: 1px;
+	margin-left: 0;
+	margin-right: 0;
+}
 #btn_enviar {
 	float: right;
 }
