--- a/agenda/contatos/css/contatos.css
+++ b/agenda/contatos/css/contatos.css
@@ -4,7 +4,7 @@
 .link_excluir_contato {
 	margin-left: 10px;
 }
-.contato_telefone.primeiro .btn_excluir {
+.primeiro .btn_excluir {
 	margin-top: 35px;
 }
 .btn_excluir span.ui-button-text {
