--- a/agenda/comum/css/comum.css
+++ b/agenda/comum/css/comum.css
@@ -51,7 +51,11 @@ b, strong {
 	text-decoration: none;
 }
 #content-wrapper:after {
+	content: ".";
+	display: block;
 	clear: both;
+	visibility: hidden;
+	overflow: hidden;
 }
 .tab {
 	background-position: 10px;
@@ -65,6 +69,7 @@ ul#navegacao li {
 }
 #conteudo {
 	min-height: 300px;
+	padding: 0;
 }
 footer {
 	background: url(../imagens/bg-footer-noise.jpg) repeat;
@@ -200,6 +205,7 @@ label.error {
 .icone_contatos{background-image: url(../imagens/icones/contatos.png);}
 .icone_editar{background-image: url(../imagens/icones/editar.png);}
 .icone_email{background-image: url(../imagens/icones/email.png);}
+.icone_telefone{background-image: url(../imagens/icones/telefone.png);}
 .icone_excluir{background-image: url(../imagens/icones/excluir.png);}
 
 .icone_novo_contato{background-image: url(../imagens/icones/novo_contato.png);}
